Fix collapsing row

--- a/src/assets/sass/components/table.scss
+++ b/src/assets/sass/components/table.scss
@@ -26,11 +26,6 @@
 
         td {
             text-align: left;
-            border: 2px solid whitesmoke;
-
-            &.collapse-row {
-                padding: 10px 10px;
-            }
         }
     }
 }
